# langchain

./: .env  pyproject.toml
1_chat_models/: 1_chat_model_basics.py  2_chat_model_basic_conversation.py  3_chat_model_conversation_with_user.py  4_chat model_save_message_history_firebase.py
2_prompt_templates/: 1_prompt_template_basics.py  2_prompt_template_with_chat_model.py
3_chains/: 1_chains_basics.py  2_chains_extended.py  3_chains_parallel.py  4_chains_branching.py
4_RAG/: 1a_rag_basics(embedding).py  1b_rag_basics(retrieval).py
4_RAG/db/odyssey_db/: chroma.sqlite3
4_RAG/sources/: cfrn_1999.txt  the_odyssey.txt
