[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Bigmanhackit <djhackit5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.9"
langchain-openai = "^0.2.10"
langchain-mistralai = "^0.2.3"
google = "^3.0.0"
langchain-google-firestore = "^0.5.0"
langchain-community = "^0.3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
